feat(hover): hover on some basic types

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,7 +17,7 @@ tree-sitter-freemarker = { path = "../parser/tree-sitter-freemarker" }
 
 once_cell = "1.21.3"
 ropey = "1.6.1"
-rust-embed = "8.7.2"
+rust-embed = { version = "8.7.2", features = ["include-exclude"] }
 serde = { version = "1.0.197", features = ["derive"] }
 strum = "0.27.2"
 strum_macros = "0.27.2"
